v6/v6.css
/* ... */
@media screen and (max-width: 767px) {
  .ssp-main-container .row-success-banner h3 {
    font-size: 50px;
    line-height: 50px;
  }
  .ssp-main-container .row-classroom-kits [class^=col],
  .ssp-main-container .row-table-equal-height [class^=col],
  .ssp-main-container .row-table-equal-height-bottom [class^=col],
  .ssp-main-container .row-table-equal-height-bottom-sm [class^=col],
  .ssp-main-container .row-table-equal-height-button [class^=col],
  .ssp-main-container .row-table-equal-height-top [class^=col],
  .ssp-main-container .row-feature-image [class^=col] {
    float: none;
    width: 450px;
    max-width: 100%;
    margin: 0 auto;
  }
  .ssp-main-container .row-classroom-kits .teal-circle,
  .ssp-main-container .row-table-equal-height .teal-circle,
  .ssp-main-container .row-table-equal-height-bottom .teal-circle,
  .ssp-main-container .row-table-equal-height-bottom-sm .teal-circle,
  .ssp-main-container .row-table-equal-height-button .teal-circle,
  .ssp-main-container .row-table-equal-height-top .teal-circle,
  .ssp-main-container .row-feature-image .teal-circle {
    margin-bottom: 20px;
  }
  .ssp-main-container .row-table-equal-height figure[class^=col] {
    display: block;
    margin: 25px auto;
    min-height: 250px;
    background-size: contain;
    background-repeat: no-repeat;
  }
  .ssp-main-container .row-table-equal-height-bottom-sm [class^=col] {
    vertical-align: bottom;
  }
  .ssp-main-container .row-table-equal-height-bottom-sm [class^=col]:nth-of-type(1) {
    vertical-align: middle;
  }
  .ssp-main-container .row-table-equal-height-button [class^=col] {
    padding-bottom: 1px;
    margin: 0 auto 40px;
  }
  .ssp-main-container .row-table-equal-height-button .object-fit {
    max-height: none;
    height: 175px;
  }
  .ssp-main-container .row-table-equal-height-button .object-fit img {
    width: 410px;
  }
  .ssp-main-container .row-feature-image article[class^=col] {
    margin: 25px auto;
  }
  .ssp-main-container .row-half-image {
    min-height: auto;
  }
  .ssp-main-container .row-half-image aside {
    padding: 15px 0;
  }
  .ssp-main-container .row-half-image figure[class^=col] {
    display: block;
    margin: 0 auto;
    height: 250px;
  }
  .ssp-main-container .row-webinar-videos aside {
    width: 450px;
    max-width: 100%;
    margin: 0 auto;
  }
  .ssp-main-container .row-webinar-videos aside .object-fit {
    height: 175px;
  }
  .ssp-main-container .md-left-sm-center {
    text-align: center;
  }
  .ssp-main-container .md-center-sm-left {
    text-align: left;
  }
  .ssp-main-container .md-right-sm-center {
    text-align: center;
  }
  .ssp-main-container .row-equal-sections [class^=col] {
    width: 450px;
    right: auto;
    overflow: auto;
    margin: 0 auto 40px auto;
    padding: 20px;
    max-width: 100%;
  }
  .ssp-main-container .row-equal-sections [class^=col] article {
    max-width: 450px;
    margin: 0 auto;
  }
  .ssp-main-container .row-equal-sections [class^=col] img {
    margin: 10px auto;
  }
  .ssp-main-container .row-equal-sections [class^=col]:last-of-type {
    margin-bottom: 0;
  }
  .ssp-main-container .row-feature-dotted .media {
    max-width: 450px;
    margin: 0 auto;
  }
  .ssp-main-container .row-feature-dotted .media-left {
    display: block;
  }
  .ssp-main-container .row-student-assemessment [class^=col] {
    margin: 25px auto;
    text-align: left;
    width: 450px;
    padding: 0;
    max-width: 100%;
  }
  .ssp-main-container .row-student-assemessment img {
    width: 450px;
  }
  .ssp-main-container .background-sel,
  .ssp-main-container .background-sel-home {
    background-size: cover;
    background-position: center right;
    background-position-x: 520px;
    transform: rotateY(180deg);
  }
  .ssp-main-container .background-sel section,
  .ssp-main-container .background-sel-home section {
    background-color: rgba(241, 241, 241, 0.85);
    transform: rotateY(-180deg);
  }
  .ssp-main-container .table-striped-dark table {
    width: 100%;
  }
  .ssp-main-container .orange-circle {
    height: 75px;
    width: 75px;
    padding: 10px;
    transform: translate(-30%, -10%);
  }
  .ssp-main-container .orange-circle p {
    font-size: 18px;
  }
}
/* ... */

